# skillhunter

./: .coveragerc  .dockerignore  .env  .env.prod  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.prod  LICENSE  Pipfile  Procfile  README.md  codecov.yml  conftest.py  coverage.xml  docker-compose.prod.yml  docker-compose.yml  heroku.yml  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  tox.ini
.github/workflows/: codeql-analysis.yml  main.yml
api/: __init__.py  urls.py
api/v1/: __init__.py  serializers.py  tests.py  urls.py  views.py
api/v3/: serializers.py  tests.py  urls.py  views.py
config/: __init__.py  asgi.py  jinja2.py  settings.py  tests.py  urls.py
core/: __init__.py  asgi.py  celery.py  jinja2.py  settings.py  tasks.py  tests.py  urls.py
core/utils/: __init__.py  celery.py  common.py
fast_api/: __init__.py  apps.py  main.py
fast_api/v2/: __init__.py  background_tasks.py  routers.py  schemas.py  tests.py  utils.py
fast_api/v2/endpoints/: __init__.py  skills.py  vacancies.py
fast_api/v2/tests/: __init__.py  conftest.py  tests.py
keyword_processor/: README.md  __init__.py  processor.py  tests.py
nginx/: Dockerfile  Dockerfile.prod  default.conf.template  nginx.conf  nginx.prod.conf
pages/: __init__.py  sitemaps.py  tests.py  urls.py  views.py
resume_analyzer/: __init__.py  analyzer.py  apps.py  forms.py  tasks.py  tests.py  urls.py  views.py
resume_analyzer/management/commands/: __init__.py  _private.py  tests.py  warmup_cache.py
scrapers/: __init__.py  admin.py  apps.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
scrapers/fixtures/: jobs.json  skills.json
scrapers/management/: hh_scraper.py  indeed_scraper.py  logging_config.py  sh_scraper.py  tests.py  utils.py
scrapers/management/commands/: __init__.py  _private.py  hh_scraper.py  indeed_scraper.py  logging_config.py  purge.py  purge_db.py  scrape.py  scrape_hh.py  scrape_indeed.py  scrape_sh.py  sh_scraper.py  tests.py
scrapers/management/shared/: base_scraper.py  generic_command.py  tests.py
scrapers/migrations/: 0001_initial.py  0001_squashed_0015_auto_20210714_1435.py  0002_auto_20200531_1420.py  0002_auto_20200616_1728.py  0003_auto_20200618_1603.py  0003_search.py  0004_auto_20200614_1005.py  0004_auto_20200618_1613.py  0005_auto_20200614_1019.py  0005_auto_20200618_1614.py  0006_auto_20200618_1624.py  0006_skill.py  0007_auto_20200618_1626.py  0008_auto_20200619_1507.py  0009_auto_20200620_1536.py  0010_auto_20200624_1612.py  0011_auto_20200710_0750.py  0012_auto_20201010_1238.py  0013_auto_20210430_0656.py  0014_alter_search_options.py  0015_auto_20210714_1435.py  0016_alter_skill_unclean_names_alter_vacancy_rated_skills.py  0017_enable_pg_trgm_20231107_1639.py  __init__.py  max_migration.txt
scrapers/utils/: __init__.py
scraping/: scraper.py  tests.py  views.py
scraping/management/commands/: scrape.py  skillhunter_v2.py  skillhunter_v3.py
skillhunter_project/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: _base.css  base.css  critical.css  custom.css  tailwind.min.css
static/js/: base.js
staticfiles/: staticfiles.json  stopwords.txt  tech.txt
staticfiles/admin/css/: changelists.09730d6ad169.css.br  changelists.69c2d200e2cb.css.br  changelists.7ca73643128e.css.br  changelists.c406274c3875.css.br  forms.1bb8b4c1f887.css.br  forms.css.br  nav_sidebar.css.br  nav_sidebar.d77625ae2948.css.br  responsive.1c318745d30f.css.br  responsive.5a9bb635f4d5.css.br  responsive.css.br  responsive_rtl.css.br  rtl.487d4a932cff.css.br
staticfiles/css/: _base.98eb7d714c5a.css.br  _base.css  base.1e5e175698fb.css  base.413d887fae5f.css  base.c25a3508042f.css  base.css  base.e823bc75c57e.css  bootstrap.min.css  critical.928357524414.css  critical.928357524414.css.br  critical.c58f5a9c8809.css.br  critical.css  critical.css.br  critical.e2a577e364f4.css  critical.e2a577e364f4.css.br  custom.809042af93c7.css  swagger-ui.99ac5767fd5b.css  swagger-ui.99ac5767fd5b.css.br  tailwind.min.029ce8ab82ac.css  tailwind.min.029ce8ab82ac.css.br  tailwind.min.3ed548820b2e.css  tailwind.min.3ed548820b2e.css.br  tailwind.min.5e59e9d1607b.css.br  tailwind.min.6ec5a856b995.css.br  tailwind.min.779d719baaad.css.br  tailwind.min.9db13fe2fe87.css.br  tailwind.min.css  tailwind.min.css.br
staticfiles/debug_toolbar/css/: print.58a6064f1b3e.css.br  toolbar.0ac798e275e5.css.br  toolbar.209e4118eb80.css.br  toolbar.2d49b5498148.css.br  toolbar.css.br  toolbar.f09aabe024b8.css.br  toolbar.f55091f2065d.css.br
staticfiles/debug_toolbar/js/: history.203571513e40.js.br  history.js.br  redirect.js.br  timer.65fba0f5f6a9.js.br  timer.js.br  toolbar.86e4f76b9675.js.br  toolbar.d8d90f45bf32.js.br  toolbar.eb1eb7a4b9e2.js.br  toolbar.js 2.br  toolbar.js.br  toolbar.timer.07bea6fcf6b4.js.br  toolbar.timer.34e55e9787d2.js.br  utils.6bd26976a942.js 2.br  utils.8dbc3a95d2cf.js.br  utils.ec636419a50b.js.br
staticfiles/images/favicon/: favicon.ecb6614e108c.ico.br  site.5f6eb78fc89c 2.webmanifest  site.954dbf692896.webmanifest.br  site.webmanifest 3.br
staticfiles/js/: base.857e2427b087.js  base.92d6b366a604.js  base.ca909fd84698.js  base.js  popper.min.6b756a049892.js  swagger-ui-bundle.aed52866dc7d.js.br
templates/: 400.html  404.html  500.html  _base.html  about.html  home.html  search_results.html
templates/jinja2/: 400.html  404.html  500.html  _base.html  about.html  courses.html  home.html  job_sites.html  robots.txt  search_results.html  swagger-ui.html  tailored_vacancies.html
test_fixtures/: scrapers_vacancy.json
