[tool.black]
exclude = '''
/(
  | migrations
)/
'''
line-length = 119

[tool.isort]
line_length = 119
profile = "black"
skip_glob = ["*/migrations/*.py"]

[tool.mypy]
plugins = ["pydantic.mypy", "mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "core.settings"

[tool.coverage]
[tool.coverage.run]
omit = ["*/migrations/*", "*asgi.py", "*wsgi.py", "*manage.py", "*conftest.py"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
addopts = "--cov-report term-missing --strict-markers --reuse-db"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.poetry]
authors = ["Evgeni Sautin <evgeni.sautin@gmail.com>"]
description = "Find the skills you need to get a job in IT"
license = "MIT"
name = "SkillHunter"
version = "3.0.0"

[tool.poetry.dependencies]
Django = "^4.2.1"
Faker = "^18.9.0"
Jinja2 = "^3.1.2"
aiohttp = "^3.8.5"
beautifulsoup4 = "^4.12.2"
boto3 = "^1.26.144"
celery = { extras = ["pytest"], version = "^5.2.7" }
django-csp = "^3.7"
django-debug-toolbar = "^4.1.0"
django-linear-migrations = "^2.8.0"
django-otp = "^1.2.1"
django-permissions-policy = "^4.15.0"
django-storages = "^1.13.2"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
drf-spectacular = "^0.26.2"
flashtext = "^2.7"

# TODO: switch to the normal version after this fix is released: https://github.com/benoitc/gunicorn/pull/2581
gunicorn = { extras = [
  "eventlet",
], url = "https://github.com/benoitc/gunicorn/archive/ff58e0c6da83d5520916bc4cc109a529258d76e1.zip#egg=gunicorn==20.1.0" }

pdftotext = "^2.2.2"
python = "^3.11"
python-multipart = "^0.0.6"
qrcode = "^7.4.2"
redis = { extras = ["hiredis"], version = "^4.5.5" }
requests = "^2.31.0"
selenium = "^4.9.1"
sentry-sdk = "^1.24.0"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
psycopg = "^3.1.9"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
django-stubs = "^4.2.0"
flake8 = "^6.0.0"
ipython = "^8.13.2"
isort = "^5.12.0"
mypy = "^1.3.0"
pre-commit = "^3.3.2"
pytest-asyncio = "^0.21.0"
pytest-cov = { extras = ["toml"], version = "^4.1.0" }
pytest-django = "^4.5.2"
pytest-xdist = { extras = ["psutil"], version = "^3.3.1" }

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
