[tool.black]
exclude = '''
/(
  | migrations
)/
'''
line-length = 119
target-version = ['py312']

[tool.isort]
line_length = 119
profile = "black"
skip_glob = ["*/migrations/*"]

[tool.ruff]
line-length = 119
target-version = "py312"
exclude = ["*/migrations/*"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "core.settings"

[tool.coverage]
[tool.coverage.run]
omit = ["*/migrations/*", "*asgi.py", "*wsgi.py", "*manage.py", "*conftest.py"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
addopts = "--cov-report term-missing --strict-markers --reuse-db"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
xfail_strict = true

[tool.poetry]
authors = ["Evgeni Sautin <evgeni.sautin@gmail.com>"]
description = "Find the skills you need to get a job in IT"
license = "MIT"
name = "SkillHunter"
version = "3.0.0"

[tool.poetry.dependencies]
Django = "^4.2.7"
Faker = "^19.13.0"
Jinja2 = "^3.1.2"
httpx = "^0.25.1"
beautifulsoup4 = "^4.12.2"
boto3 = "^1.28.78"
celery = { extras = ["pytest"], version = "^5.3.4" }
django-csp = "^3.7"
django-debug-toolbar = "^4.2.0"
django-linear-migrations = "^2.12.0"
django-otp = "^1.2.4"
django-permissions-policy = "^4.18.0"
django-storages = "^1.14.2"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
drf-spectacular = "^0.26.5"
flashtext = "^2.7"
gunicorn = "^21.2.0"
pdftotext = "^2.2.2"
python = "^3.12"
python-multipart = "^0.0.6"
qrcode = "^7.4.2"
redis = { extras = ["hiredis"], version = "^5.0.1" }
requests = "^2.31.0"
selenium = "^4.15.2"
sentry-sdk = "^1.34.0"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
psycopg = { extras = ["binary", "pool", "c"], version = "^3.1.12" }

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.10.1"
isort = "^5.12.0"
ruff = "^0.1.4"
mypy = "^1.6.1"
django-stubs = "^4.2.6"
ipython = "^8.17.2"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-django = "^4.6.0"
pytest-asyncio = "^0.21.1"
pytest-randomly = "^3.15.0"
pytest-xdist = { extras = ["psutil"], version = "^3.3.1" }

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
