[tool.black]
exclude = '''
/(
  | migrations
)/
'''
line-length = 119
target-version = ['py312']

[tool.isort]
line_length = 119
profile = "black"
skip_glob = ["*/migrations/*"]

[tool.ruff]
line-length = 119
target-version = "py312"
exclude = ["*/migrations/*"]

[tool.bandit]
exclude_dirs = ["tests.py", "test_*.py", "*_tests.py"]
skips = ["B101", "B601"]

[tool.coverage]
[tool.coverage.run]
omit = ["*/migrations/*", "*asgi.py", "*wsgi.py", "*manage.py", "*conftest.py"]
concurrency = ["greenlet"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
addopts = "--cov-report term-missing --strict-markers --reuse-db"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
xfail_strict = true

[tool.poetry]
authors = ["Evgeni Sautin <evgeni.sautin@gmail.com>"]
description = "Find the skills you need to get a job in IT"
license = "MIT"
name = "SkillHunter"
version = "3.0.0"

[tool.poetry.dependencies]
Django = "^5.0"
Faker = "^19.13.0"
Jinja2 = "^3.1.2"
boto3 = "^1.28.78"
celery = { extras = ["pytest"], version = "^5.3.4" }
# Switch to regular version after Django 5.0 support is released
django-celery-beat = { git = "https://github.com/celery/django-celery-beat.git", branch = "main" }
django-csp = "^3.7"
django-debug-toolbar = "^4.2.0"
django-linear-migrations = "^2.12.0"
django-otp = "^1.2.4"
django-permissions-policy = "^4.18.0"
django-storages = "^1.14.2"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
drf-spectacular = "^0.26.5"
flashtext = "^2.7"
gunicorn = "^21.2.0"
pypdf = "^3.17.1"
python = "^3.12"
python-multipart = "^0.0.6"
python-decouple = "^3.8"
qrcode = "^7.4.2"
redis = { extras = ["hiredis"], version = "^5.0.1" }
beautifulsoup4 = { extras = ["lxml"], version = "^4.12.2" }
playwright = "^1.39.0"
sentry-sdk = "^1.34.0"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
psycopg = { extras = ["binary", "pool", "c"], version = "^3.1.12" }
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.10.1"
isort = "^5.12.0"
ruff = "^0.1.4"
ipython = "^8.17.2"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-django = "^4.6.0"
pytest-randomly = "^3.15.0"
pytest-xdist = { extras = ["psutil"], version = "^3.3.1" }

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
